<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zenohpico_vendor</name>
  <version>0.0.0</version>
  <description>Vendor pkg to install zenohpico</description>
  <maintainer email="bsowa123@gmail.com">Błażej Sowa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
